c2prj1_cards/grade.txt
Grading at Mon May 17 09:05:41 UTC 2021
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:71:7: error: ‘i’ undeclared (first use in this function)
   for(i=2;i<14;i++){
       ^
cards.c:71:7: note: each undeclared identifier is reported only once for each function it appears in
Could not compile your card.c!

Overall Grade: FAILED
